{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 8,
  "lineage": "a4ccf1dd-dcf2-50ab-cbc7-5a4752dcc13a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561843101819:internet-gateway/igw-0cbbc2c2bfb89746c",
            "id": "igw-0cbbc2c2bfb89746c",
            "owner_id": "561843101819",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-07d1d3825a8d79210"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01086e400adb6fe9d",
            "owner_id": "561843101819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cbbc2c2bfb89746c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "vpc_id": "vpc-07d1d3825a8d79210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02361b5bcdc139c25",
            "route_table_id": "rtb-01086e400adb6fe9d",
            "subnet_id": "subnet-000c6f66f54810f95"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561843101819:security-group/sg-05ae23c18854ab7c2",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ae23c18854ab7c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "561843101819",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07d1d3825a8d79210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561843101819:subnet/subnet-000c6f66f54810f95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-000c6f66f54810f95",
            "map_public_ip_on_launch": false,
            "owner_id": "561843101819",
            "tags": {
              "Name": "Terraform_Public_Subnet3-testing"
            },
            "vpc_id": "vpc-07d1d3825a8d79210"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561843101819:vpc/vpc-07d1d3825a8d79210",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05b52e7993846897b",
            "default_route_table_id": "rtb-088587fff373f0aad",
            "default_security_group_id": "sg-0ccfd3600d5c37cbd",
            "dhcp_options_id": "dopt-06f1d05fee9b509f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07d1d3825a8d79210",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-088587fff373f0aad",
            "owner_id": "561843101819",
            "tags": {
              "Name": "terraform-aws-testing",
              "Owner": "shiva.pinisettiii",
              "environment": "dev",
              "fav_Batsman": "Dhoni",
              "fav_cricketer": "Dhoni"
            }
          }
        }
      ]
    }
  ]
}